# amlogic-firmware-ram-timing-dumper

./: Cargo.toml  dram_sbox  dramubootkvim3l.txt  dramubootmine.txt
data/: DDR.USB  timing.h
src/: main.rs
