[package]
name = "amlogic-firmware-ram-timing-dumper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.0.0-rc.3", features = ["derive"]}
color-eyre = "0.5"
byteorder = "1"
thiserror = "1"